@@ -70,7 +70,6 @@ import org.apache.druid.server.security.AuthConfig;
 import org.apache.druid.server.security.AuthenticationResult;
 import org.apache.druid.server.security.ForbiddenException;
 import org.apache.druid.sql.SqlLifecycleManager;
-import org.apache.druid.sql.SqlStatementFactory;
 import org.apache.druid.sql.SqlToolbox;
 import org.apache.druid.sql.calcite.planner.CalciteRulesManager;
 import org.apache.druid.sql.calcite.planner.CatalogResolver;
@@ -83,8 +82,13 @@ import org.apache.druid.sql.calcite.util.QueryFrameworkUtils;
 import org.apache.druid.sql.calcite.util.TestTimelineServerView;
 import org.apache.druid.sql.calcite.view.NoopViewManager;
 import org.apache.druid.sql.hook.DruidHookDispatcher;
+import org.apache.druid.sql.http.EngineInfo;
+import org.apache.druid.sql.http.GetQueriesResponse;
 import org.apache.druid.sql.http.ResultFormat;
+import org.apache.druid.sql.http.SqlEngineRegistry;
 import org.apache.druid.sql.http.SqlQuery;
+import org.apache.druid.sql.http.SqlResource;
+import org.apache.druid.sql.http.SupportedEnginesResponse;
 import org.hamcrest.CoreMatchers;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Assertions;
@@ -100,6 +104,7 @@ import java.io.IOException;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
@@ -109,7 +114,7 @@ import java.util.concurrent.TimeUnit;
 import static org.hamcrest.MatcherAssert.assertThat;
 
 /**
- * Functional test of {@link DartSqlResource}, {@link DartSqlEngine}, and {@link DartQueryMaker}.
+ * Functional test of {@link SqlResource}, {@link DartSqlEngine}, and {@link DartQueryMaker}.
  * Other classes are mocked when possible.
  */
 public class DartSqlResourceTest extends MSQTestBase
@@ -138,7 +143,7 @@ public class DartSqlResourceTest extends MSQTestBase
 
   // Objects created in setUp() below this line.
 
-  private DartSqlResource sqlResource;
+  private SqlResource sqlResource;
   private DartControllerRegistry controllerRegistry;
   private ExecutorService controllerExecutor;
   private AutoCloseable mockCloser;
@@ -146,13 +151,13 @@ public class DartSqlResourceTest extends MSQTestBase
   // Mocks below this line.
 
   /**
-   * Mock for {@link DartSqlClients}, which is used in tests of {@link DartSqlResource#doGetRunningQueries}.
+   * Mock for {@link DartSqlClients}, which is used in tests of {@link SqlResource#doGetRunningQueries}.
    */
   @Mock
   private DartSqlClients dartSqlClients;
 
   /**
-   * Mock for {@link DartSqlClient}, which is used in tests of {@link DartSqlResource#doGetRunningQueries}.
+   * Mock for {@link DartSqlClient}, which is used in tests of {@link SqlResource#doGetRunningQueries}.
    */
   @Mock
   private DartSqlClient dartSqlClient;
@@ -173,42 +178,6 @@ public class DartSqlResourceTest extends MSQTestBase
   void setUp()
   {
     mockCloser = MockitoAnnotations.openMocks(this);
-
-    final DartSqlEngine engine = new DartSqlEngine(
-        new MSQTestControllerContext(
-            objectMapper,
-            injector,
-            null /* not used in this test */,
-            workerMemoryParameters,
-            loadedSegmentsMetadata,
-            TaskLockType.APPEND,
-            QueryContext.empty()
-        ) {
-          @Override
-          public ControllerQueryKernelConfig queryKernelConfig(String queryId, MSQSpec querySpec)
-          {
-            return super.queryKernelConfig(queryId, querySpec).toBuilder()
-                .workerIds(ImmutableList.of("some")).build();
-          }
-        },
-        controllerRegistry = new DartControllerRegistry()
-        {
-          @Override
-          public void register(ControllerHolder holder)
-          {
-            super.register(holder);
-            controllerRegistered.countDown();
-          }
-        },
-        objectMapper.convertValue(ImmutableMap.of(), DartControllerConfig.class),
-        controllerExecutor = Execs.multiThreaded(
-            MAX_CONTROLLERS,
-            StringUtils.encodeForFormat(getClass().getSimpleName() + "-controller-exec")
-        ),
-        new DartQueryKitSpecFactory(new TestTimelineServerView(Collections.emptyList())),
-        new ServerConfig(),
-        new DefaultQueryConfig(ImmutableMap.of("foo", "bar"))
-    );
 
     final DruidSchemaCatalog rootSchema = QueryFrameworkUtils.createMockRootSchema(
         CalciteTests.INJECTOR,
@@ -239,7 +208,7 @@ public class DartSqlResourceTest extends MSQTestBase
 
     final SqlLifecycleManager lifecycleManager = new SqlLifecycleManager();
     final SqlToolbox toolbox = new SqlToolbox(
-        engine,
+        null,
         plannerFactory,
         NoopServiceEmitter.instance(),
         NoopRequestLogger.instance(),
@@ -248,14 +217,51 @@ public class DartSqlResourceTest extends MSQTestBase
         lifecycleManager
     );
 
-    sqlResource = new DartSqlResource(
+
+    final DartSqlEngine engine = new DartSqlEngine(
+        new MSQTestControllerContext(
+            objectMapper,
+            injector,
+            null /* not used in this test */,
+            workerMemoryParameters,
+            loadedSegmentsMetadata,
+            TaskLockType.APPEND,
+            QueryContext.empty()
+        ) {
+          @Override
+          public ControllerQueryKernelConfig queryKernelConfig(String queryId, MSQSpec querySpec)
+          {
+            return super.queryKernelConfig(queryId, querySpec).toBuilder()
+                        .workerIds(ImmutableList.of("some")).build();
+          }
+        },
+        controllerRegistry = new DartControllerRegistry()
+        {
+          @Override
+          public void register(ControllerHolder holder)
+          {
+            super.register(holder);
+            controllerRegistered.countDown();
+          }
+        },
+        objectMapper.convertValue(ImmutableMap.of(), DartControllerConfig.class),
+        controllerExecutor = Execs.multiThreaded(
+            MAX_CONTROLLERS,
+            StringUtils.encodeForFormat(getClass().getSimpleName() + "-controller-exec")
+        ),
+        new DartQueryKitSpecFactory(new TestTimelineServerView(Collections.emptyList())),
+        new ServerConfig(),
+        new DefaultQueryConfig(ImmutableMap.of("foo", "bar")),
+        toolbox,
+        dartSqlClients
+    );
+
+    sqlResource = new SqlResource(
         objectMapper,
         CalciteTests.TEST_AUTHORIZER_MAPPER,
-        new SqlStatementFactory(toolbox),
-        controllerRegistry,
-        lifecycleManager,
-        dartSqlClients,
         new ServerConfig() /* currently only used for error transform strategy */,
+        lifecycleManager,
+        new SqlEngineRegistry(Set.of(engine)),
         ResponseContextConfig.newConfig(false),
         SELF_NODE
     );
@@ -284,12 +290,13 @@ public class DartSqlResourceTest extends MSQTestBase
   @Test
   public void test_getEnabled()
   {
-    final Response response = sqlResource.doGetEnabled(httpServletRequest);
-    Assertions.assertEquals(Response.Status.OK.getStatusCode(), response.getStatus());
+    Response response = sqlResource.getSupportedEngines(httpServletRequest);
+    Set<EngineInfo> supportedEngines = ((SupportedEnginesResponse) response.getEntity()).getEngines();
+    Assertions.assertTrue(supportedEngines.contains(new EngineInfo(DartSqlEngine.NAME)));
   }
 
   /**
-   * Test where a superuser calls {@link DartSqlResource#doGetRunningQueries} with selfOnly enabled.
+   * Test where a superuser calls {@link SqlResource#doGetRunningQueries} with selfOnly enabled.
    */
   @Test
   public void test_getRunningQueries_selfOnly_superUser()
@@ -301,7 +308,7 @@ public class DartSqlResourceTest extends MSQTestBase
 
     Assertions.assertEquals(
         new GetQueriesResponse(Collections.singletonList(DartQueryInfo.fromControllerHolder(holder))),
-        sqlResource.doGetRunningQueries("", httpServletRequest)
+        sqlResource.doGetRunningQueries("", httpServletRequest).getEntity()
     );
 
     controllerRegistry.deregister(holder);
@@ -309,7 +316,7 @@ public class DartSqlResourceTest extends MSQTestBase
 
   /**
    * Test where {@link #REGULAR_USER_NAME} and {@link #DIFFERENT_REGULAR_USER_NAME} issue queries, and
-   * {@link #REGULAR_USER_NAME} calls {@link DartSqlResource#doGetRunningQueries} with selfOnly enabled.
+   * {@link #REGULAR_USER_NAME} calls {@link SqlResource#doGetRunningQueries} with selfOnly enabled.
    */
   @Test
   public void test_getRunningQueries_selfOnly_regularUser()
@@ -325,7 +332,7 @@ public class DartSqlResourceTest extends MSQTestBase
     Assertions.assertEquals(
         new GetQueriesResponse(
             Collections.singletonList(DartQueryInfo.fromControllerHolder(holder).withoutAuthenticationResult())),
-        sqlResource.doGetRunningQueries("", httpServletRequest)
+        sqlResource.doGetRunningQueries("", httpServletRequest).getEntity()
     );
 
     controllerRegistry.deregister(holder);
@@ -333,7 +340,7 @@ public class DartSqlResourceTest extends MSQTestBase
   }
 
   /**
-   * Test where a superuser calls {@link DartSqlResource#doGetRunningQueries} with selfOnly disabled.
+   * Test where a superuser calls {@link SqlResource#doGetRunningQueries} with selfOnly disabled.
    */
   @Test
   public void test_getRunningQueries_global_superUser()
@@ -366,14 +373,14 @@ public class DartSqlResourceTest extends MSQTestBase
                 remoteQueryInfo
             )
         ),
-        sqlResource.doGetRunningQueries(null, httpServletRequest)
+        sqlResource.doGetRunningQueries(null, httpServletRequest).getEntity()
     );
 
     controllerRegistry.deregister(localHolder);
   }
 
   /**
-   * Test where a superuser calls {@link DartSqlResource#doGetRunningQueries} with selfOnly disabled, and where the
+   * Test where a superuser calls {@link SqlResource#doGetRunningQueries} with selfOnly disabled, and where the
    * remote server has a problem.
    */
   @Test
@@ -393,7 +400,7 @@ public class DartSqlResourceTest extends MSQTestBase
     // were able to fetch.)
     Assertions.assertEquals(
         new GetQueriesResponse(ImmutableList.of(DartQueryInfo.fromControllerHolder(localHolder))),
-        sqlResource.doGetRunningQueries(null, httpServletRequest)
+        sqlResource.doGetRunningQueries(null, httpServletRequest).getEntity()
     );
 
     controllerRegistry.deregister(localHolder);
@@ -401,7 +408,7 @@ public class DartSqlResourceTest extends MSQTestBase
 
   /**
    * Test where {@link #REGULAR_USER_NAME} and {@link #DIFFERENT_REGULAR_USER_NAME} issue queries, and
-   * {@link #REGULAR_USER_NAME} calls {@link DartSqlResource#doGetRunningQueries} with selfOnly disabled.
+   * {@link #REGULAR_USER_NAME} calls {@link SqlResource#doGetRunningQueries} with selfOnly disabled.
    */
   @Test
   public void test_getRunningQueries_global_regularUser()
@@ -430,7 +437,7 @@ public class DartSqlResourceTest extends MSQTestBase
     Assertions.assertEquals(
         new GetQueriesResponse(
             ImmutableList.of(DartQueryInfo.fromControllerHolder(localHolder).withoutAuthenticationResult())),
-        sqlResource.doGetRunningQueries(null, httpServletRequest)
+        sqlResource.doGetRunningQueries(null, httpServletRequest).getEntity()
     );
 
     controllerRegistry.deregister(localHolder);
@@ -438,7 +445,7 @@ public class DartSqlResourceTest extends MSQTestBase
 
   /**
    * Test where {@link #REGULAR_USER_NAME} and {@link #DIFFERENT_REGULAR_USER_NAME} issue queries, and
-   * {@link #DIFFERENT_REGULAR_USER_NAME} calls {@link DartSqlResource#doGetRunningQueries} with selfOnly disabled.
+   * {@link #DIFFERENT_REGULAR_USER_NAME} calls {@link SqlResource#doGetRunningQueries} with selfOnly disabled.
    */
   @Test
   public void test_getRunningQueries_global_differentRegularUser()
@@ -466,7 +473,7 @@ public class DartSqlResourceTest extends MSQTestBase
     // The endpoint returns only the query issued by DIFFERENT_REGULAR_USER_NAME.
     Assertions.assertEquals(
         new GetQueriesResponse(ImmutableList.of(remoteQueryInfo.withoutAuthenticationResult())),
-        sqlResource.doGetRunningQueries(null, httpServletRequest)
+        sqlResource.doGetRunningQueries(null, httpServletRequest).getEntity()
     );
 
     controllerRegistry.deregister(holder);
@@ -490,7 +497,7 @@ public class DartSqlResourceTest extends MSQTestBase
         false,
         false,
         false,
-        Collections.emptyMap(),
+        Map.of(QueryContexts.ENGINE, DartSqlEngine.NAME),
         Collections.emptyList()
     );
 
@@ -517,7 +524,7 @@ public class DartSqlResourceTest extends MSQTestBase
         false,
         false,
         false,
-        Collections.emptyMap(),
+        Map.of(QueryContexts.ENGINE, DartSqlEngine.NAME),
         Collections.emptyList()
     );
 
@@ -545,7 +552,7 @@ public class DartSqlResourceTest extends MSQTestBase
         false,
         false,
         false,
-        Collections.emptyMap(),
+        Map.of(QueryContexts.ENGINE, DartSqlEngine.NAME),
         Collections.emptyList()
     );
 
@@ -562,7 +569,6 @@ public class DartSqlResourceTest extends MSQTestBase
     assertThat((String) e.get("errorMessage"), CoreMatchers.startsWith("InvalidNullByte: "));
   }
 
-  @Test
   public void test_doPost_regularUser_fullReport() throws Exception
   {
     final MockAsyncContext asyncContext = new MockAsyncContext();
@@ -580,7 +586,7 @@ public class DartSqlResourceTest extends MSQTestBase
         false,
         false,
         false,
-        ImmutableMap.of(QueryContexts.CTX_FULL_REPORT, true),
+        ImmutableMap.of(QueryContexts.CTX_FULL_REPORT, true, QueryContexts.ENGINE, DartSqlEngine.NAME),
         Collections.emptyList()
     );
 
@@ -621,7 +627,11 @@ public class DartSqlResourceTest extends MSQTestBase
         false,
         false,
         false,
-        ImmutableMap.of(QueryContexts.CTX_FULL_REPORT, true, QueryContexts.TIMEOUT_KEY, 1),
+        ImmutableMap.of(
+            QueryContexts.CTX_FULL_REPORT, true,
+            QueryContexts.TIMEOUT_KEY, 1,
+            QueryContexts.ENGINE, DartSqlEngine.NAME
+        ),
         Collections.emptyList()
     );
 
@@ -662,7 +672,7 @@ public class DartSqlResourceTest extends MSQTestBase
         false,
         false,
         false,
-        ImmutableMap.of(QueryContexts.CTX_FULL_REPORT, true),
+        ImmutableMap.of(QueryContexts.CTX_FULL_REPORT, true, QueryContexts.ENGINE, DartSqlEngine.NAME),
         Collections.emptyList()
     );
 
@@ -734,7 +744,11 @@ public class DartSqlResourceTest extends MSQTestBase
         false,
         false,
         false,
-        ImmutableMap.of(QueryContexts.CTX_SQL_QUERY_ID, sqlQueryId, QueryContexts.CTX_FULL_REPORT, fullReport),
+        ImmutableMap.of(
+            QueryContexts.CTX_SQL_QUERY_ID, sqlQueryId,
+            QueryContexts.CTX_FULL_REPORT, fullReport,
+            QueryContexts.ENGINE, DartSqlEngine.NAME
+        ),
         Collections.emptyList()
     );
 
@@ -790,12 +804,12 @@ public class DartSqlResourceTest extends MSQTestBase
            .thenReturn(makeAuthenticationResult(REGULAR_USER_NAME));
 
     final Response cancellationResponse = sqlResource.cancelQuery("nonexistent", httpServletRequest);
-    Assertions.assertEquals(Response.Status.ACCEPTED.getStatusCode(), cancellationResponse.getStatus());
+    Assertions.assertEquals(Response.Status.NOT_FOUND.getStatusCode(), cancellationResponse.getStatus());
   }
 
   /**
    * Add a mock {@link ControllerHolder} to {@link #controllerRegistry}, with a query run by the given user.
-   * Used by methods that test {@link DartSqlResource#doGetRunningQueries}.
+   * Used by methods that test {@link SqlResource#doGetRunningQueries}.
    *
    * @return the mock holder
    */
